--- a/src/.env.example
+++ b/src/.env.example
@@ -4,9 +4,14 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+FRONTEND_URL=http://localhost:3000
+FRONTEND_MAIL_VERIFY_PATH=verify-email
+FRONTEND_RESET_PASSWORD_PATH=reset-password
+
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
+APP_TIMEZONE=Asia/Dhaka
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
