--- a/src/.env.example
+++ b/src/.env.example
@@ -21,9 +21,10 @@ PHP_CLI_SERVER_WORKERS=4
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
-LOG_STACK=single
+LOG_STACK=single,daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+LOG_DAYS=31
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
