--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -7,6 +7,7 @@ services:
         uid: 1412
       context: .
       dockerfile: /docker/php-fpm/Dockerfile
+      target: production
     volumes:
       - ./src:/var/www/
       - ./src/.env.staging:/var/www/.env
@@ -30,7 +31,8 @@ services:
     volumes:
       - ./src:/var/www/
       - ./docker/nginx/templates:/etc/nginx/templates
+      - ./docker/nginx/html:/usr/share/nginx/html
     depends_on:
       - app  
     restart: unless-stopped
-  
+
