--- a/src/.env.local
+++ b/src/.env.local
@@ -27,11 +27,11 @@ LOG_LEVEL=debug
 LOG_DAYS=31
 
 DB_CONNECTION=mysql
-DB_HOST=host.docker.internal
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=sanctum_token_auth
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
