--- a/src/.env.prod
+++ b/src/.env.prod
@@ -27,7 +27,7 @@ LOG_LEVEL=debug
 LOG_DAYS=31
 
 DB_CONNECTION=mysql
-DB_HOST=host.docker.internal
+DB_HOST=
 DB_PORT=3306
 DB_DATABASE=sanctum_token_auth
 DB_USERNAME=root
