--- a/src/.env.staging
+++ b/src/.env.staging
@@ -21,10 +21,11 @@ PHP_CLI_SERVER_WORKERS=4
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
-LOG_STACK=daily
+LOG_STACK=stdout,stderr,slack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 LOG_DAYS=31
+SLACK_LOG_LEVEL=critical
 
 DB_CONNECTION=mysql
 DB_HOST=
