--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -43,7 +43,10 @@ jobs:
         run: |
           cd src
           mkdir -p ../coverage-html
-          vendor/bin/phpunit --coverage-html ../coverage-html
+          vendor/bin/phpunit \
+          --coverage-html ../coverage-html \
+          --coverage-text \
+          --show-uncovered-files
 
       - name: Upload HTML coverage report
         uses: actions/upload-artifact@v4
